{
  "version": 4,
  "terraform_version": "0.14.4",
  "serial": 44,
  "lineage": "e0b55976-983d-7930-ad76-2edfd8bdc35d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "sl-prj1-k8s-master",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0747bdcabd34c712a",
            "arn": "arn:aws:ec2:us-east-1:843412311059:instance/i-0eb4e403e2861e195",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0eb4e403e2861e195",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "simplilearn_test",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-07bc02fead8d1c434",
            "private_dns": "ip-10-1-0-201.ec2.internal",
            "private_ip": "10.1.0.201",
            "public_dns": "ec2-3-90-191-123.compute-1.amazonaws.com",
            "public_ip": "3.90.191.123",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0adee678a73d0bb7f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04c08a5138696fd74",
            "tags": {
              "Group": "master",
              "Name": "k8s-master"
            },
            "tags_all": {
              "Group": "master",
              "Name": "k8s-master"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-046949659742ee668"
            ]
          },
          "dependencies": [
            "aws_security_group.sl-prj1-sg-22",
            "aws_subnet.sl-prj1-subnet-public",
            "aws_vpc.sl-prj1-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "sl-prj1-k8s-worker1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0747bdcabd34c712a",
            "arn": "arn:aws:ec2:us-east-1:843412311059:instance/i-0f0c9bb9010dd790b",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f0c9bb9010dd790b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "simplilearn_test",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0878f87390cd7a58b",
            "private_dns": "ip-10-1-0-17.ec2.internal",
            "private_ip": "10.1.0.17",
            "public_dns": "ec2-54-90-87-141.compute-1.amazonaws.com",
            "public_ip": "54.90.87.141",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0034e4386db7da6df",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04c08a5138696fd74",
            "tags": {
              "Group": "worker",
              "Name": "k8s-worker1"
            },
            "tags_all": {
              "Group": "worker",
              "Name": "k8s-worker1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-046949659742ee668"
            ]
          },
          "dependencies": [
            "aws_security_group.sl-prj1-sg-22",
            "aws_subnet.sl-prj1-subnet-public",
            "aws_vpc.sl-prj1-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "sl-prj1-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:843412311059:internet-gateway/igw-0af0ffd1fad488346",
            "id": "igw-0af0ffd1fad488346",
            "owner_id": "843412311059",
            "vpc_id": "vpc-0561cfd8bfd6df7f3"
          },
          "dependencies": [
            "aws_vpc.sl-prj1-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "sl-prj1-rtb-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:843412311059:route-table/rtb-0951baf8ac1c16962",
            "id": "rtb-0951baf8ac1c16962",
            "owner_id": "843412311059",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0af0ffd1fad488346",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "vpc_id": "vpc-0561cfd8bfd6df7f3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.sl-prj1-igw",
            "aws_vpc.sl-prj1-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "sl-prj1-rta-subnet-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0596607f01b8fe2f7",
            "route_table_id": "rtb-0951baf8ac1c16962",
            "subnet_id": "subnet-04c08a5138696fd74"
          },
          "dependencies": [
            "aws_internet_gateway.sl-prj1-igw",
            "aws_route_table.sl-prj1-rtb-public",
            "aws_subnet.sl-prj1-subnet-public",
            "aws_vpc.sl-prj1-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sl-prj1-sg-22",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:843412311059:security-group/sg-046949659742ee668",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-046949659742ee668",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "sg_22",
            "name_prefix": "",
            "owner_id": "843412311059",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0561cfd8bfd6df7f3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.sl-prj1-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sl-prj1-subnet-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:843412311059:subnet/subnet-04c08a5138696fd74",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.1.0.0/24",
            "id": "subnet-04c08a5138696fd74",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "843412311059",
            "vpc_id": "vpc-0561cfd8bfd6df7f3"
          },
          "dependencies": [
            "aws_vpc.sl-prj1-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "sl-prj1-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:843412311059:vpc/vpc-0561cfd8bfd6df7f3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-017d26799e2274a43",
            "default_route_table_id": "rtb-08f1b0117ef3b65ab",
            "default_security_group_id": "sg-0cbaf058daaa3a01e",
            "dhcp_options_id": "dopt-46e78420",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0561cfd8bfd6df7f3",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-08f1b0117ef3b65ab",
            "owner_id": "843412311059"
          }
        }
      ]
    }
  ]
}